Fixed issue with legends on firefox (GRRRR) and replaced the tutorial images.

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -17,6 +17,11 @@ input {
     margin-bottom: 5%;
 }
 
+legend {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 button{
     margin-bottom: 5%;
 }
